syntax = "proto3";

message BusinessAccountInfo {
    int32 is_business_account = 1;
    int32 is_forum_business_account = 2;
    string business_name = 3;
    string identifi_explain = 4;
}
