syntax = "proto3";

message ManagerElection {
    uint32 can_vote = 1;
    uint32 vote_num = 2;
    uint32 begin_vote_time = 3;
    uint32 election_id = 4;
    repeated string vote_condition = 5;
    string tail_text = 6;
    uint32 is_show_distribute = 7;
    uint32 remainder_time = 8;
    uint32 status = 9;
}
