syntax = "proto3";

import "Anti.proto";
import "Page.proto";
import "Post.proto";
import "SimpleForum.proto";
import "SubPostList.proto";
import "ThreadInfo.proto";

message DataRes {
    Page page = 1;
    Anti anti = 2;
    Post post = 3;
    repeated SubPostList subpost_list = 4;
    ThreadInfo thread = 5;
    SimpleForum forum = 6;
    int32 server_time = 7;
    SimpleForum display_forum = 8;
}
