syntax = "proto3";

import "HotPost.proto";
import "Post.proto";

message PbHotPost {
    repeated Post post_list = 1;
    int32 need_hot_post = 2;
    int32 need_post_zan = 3;
    repeated HotPost hot_post_list = 4;
}
