syntax = "proto3";

message BusinessPromotInfo {
    int32 is_promot = 1;
}
