syntax = "proto3";

import "AlaLiveInfo.proto";
import "Anti.proto";
import "BannerList.proto";
import "FineBannerPb.proto";
import "GraffitiRankListInfo.proto";
import "Lbs.proto";
import "Page.proto";
import "PbHotPost.proto";
import "PbPage/AddPost.proto";
import "PbPage/AppealInfo.proto";
import "PbPage/ForumHeadlineImgInfo.proto";
import "PbPage/GodCard.proto";
import "PbPage/NewsInfo.proto";
import "PbPage/PostBanner.proto";
import "PbPage/RecommendBook.proto";
import "Post.proto";
import "PsRankListItem.proto";
import "RecommendThread.proto";
import "SdkTopicThread.proto";
import "SimpleForum.proto";
import "ThreadInfo.proto";
import "TwZhiBoAnti.proto";
import "User.proto";

message DataRes {
    User user = 1;
    SimpleForum forum = 2;
    Page page = 3;
    Anti anti = 4;
    AddPost add_post = 5;
    repeated Post post_list = 6;
    int32 has_floor = 7;
    ThreadInfo thread = 8;
    Lbs location = 9;
    int32 is_new_url = 10;
    repeated PostBanner post_banner = 11;
    BannerList banner_list = 12;
    repeated User user_list = 13;
    int32 server_time = 14;
    NewsInfo news_info = 15;
    repeated RecommendThread recommend_threads = 16;
    repeated FineBannerPb fine_banner = 17;
    TwZhiBoAnti twzhibo_anti = 18;
    SdkTopicThread sdk_topic_thread = 19;
    PbHotPost hot_post_list = 20;
    GraffitiRankListInfo graffiti_rank_list_info = 21;
    AppealInfo appeal_info = 22;
    GodCard god_card = 23;
    repeated PsRankListItem play_rank_list = 24;
    RecommendBook recommend_book = 25;
    AlaLiveInfo ala_info = 26;
    ForumHeadlineImgInfo forum_headline_img_info = 27;
    string asp_shown_info = 28;
}
