syntax = "proto3";

message PbSortType {
    int32 sort_type = 1;
    string sort_name = 2;
}
