syntax = "proto3";

import "Post.proto";

message PbTopAgreePost {
    repeated Post post_list = 1;
    int32 total_num = 2;
    repeated int64 post_id_list = 3;
}
