syntax = "proto3";

import "ActPost.proto";
import "AddPostList.proto";
import "Advertisement.proto";
import "Agree.proto";
import "AigcFeedbackInfo.proto";
import "BotReplyContent.proto";
import "CallRobotEntrance.proto";
import "CardLinkInfo.proto";
import "ChatContent.proto";
import "CustomFigure.proto";
import "CustomState.proto";
import "DealInfo.proto";
import "FestivalTipData.proto";
import "FullLengthNovel.proto";
import "HeadItem.proto";
import "Item.proto";
import "Lbs.proto";
import "NovelInfo.proto";
import "NovelRecomCard.proto";
import "OriginThreadInfo.proto";
import "PbContent.proto";
import "PbPostZan.proto";
import "PbPresent.proto";
import "RobotSkill.proto";
import "SignatureData.proto";
import "SimpleForum.proto";
import "SkinInfo.proto";
import "SubPost.proto";
import "TPointPost.proto";
import "TailInfo.proto";
import "ThemeBubble.proto";
import "TogetherHi.proto";
import "User.proto";
import "VideoInfo.proto";
import "Zan.proto";

message Post {
    uint64 id = 1;
    string title = 2;
    uint32 floor = 3;
    uint32 time = 4;
    repeated PbContent content = 5;
    repeated string arr_video = 6;
    Lbs lbs_info = 7;
    uint32 is_vote = 8;
    uint32 is_voice = 9;
    uint32 is_ntitle = 10;
    uint32 is_bub = 11;
    string vote_crypt = 12;
    uint32 sub_post_number = 13;
    string time_ex = 14;
    SubPost sub_post_list = 15;
    AddPostList add_post_list = 16;
    string bimg_url = 17;
    string ios_bimg_format = 18;
    int64 author_id = 19;
    uint32 add_post_number = 20;
    SignatureData signature = 21;
    TailInfo tail_info = 22;
    User author = 23;
    Zan zan = 24;
    int32 storecount = 25;
    TPointPost tpoint_post = 26;
    ActPost act_post = 27;
    PbPresent present = 28;
    VideoInfo video_info = 29;
    PbPostZan post_zan = 30;
    int32 is_hot_post = 31;
    repeated TailInfo ext_tails = 32;
    TogetherHi high_together = 33;
    SkinInfo skin_info = 34;
    DealInfo pb_deal_info = 35;
    string lego_card = 36;
    Agree agree = 37;
    SimpleForum from_forum = 38;
    int32 is_post_visible = 39;
    int32 need_log = 40;
    int32 img_num_abtest = 41;
    OriginThreadInfo origin_thread_info = 42;
    int32 is_fold = 43;
    string fold_tip = 44;
    int32 is_top_agree_post = 45;
    int64 tid = 46;
    int32 show_squared = 47;
    int32 is_bjh = 48;
    string quote_id = 50;
    int32 is_wonderful_post = 51;
    repeated HeadItem item_star = 52;
    Item item = 53;
    Item outer_item = 54;
    Advertisement advertisement = 55;
    int32 fold_comment_status = 56;
    string fold_comment_apply_url = 57;
    NovelInfo novel_info = 58;
    repeated CardLinkInfo card_link_info = 59;
    CustomFigure custom_figure = 60;
    CustomState custom_state = 61;
    FullLengthNovel full_length_novel = 62;
    string dynamic_url = 63;
    ThemeBubble bubble_info = 64;
    string rumor_source_img = 65;
    FestivalTipData festival_tip_data = 66;
    NovelRecomCard novel_recom_card = 67;
    int32 shield_icon = 68;
    string icon_url = 69;
    string toutiao_card_tag = 70;
    string toutiao_card_tag_color = 71;
    CallRobotEntrance call_robot_entrance = 72;
    int32 is_bot_reply = 73;
    string bot_reply_content = 74;
    repeated BotReplyContent bot_reply_content_list = 75;
    repeated RobotSkill robot_skill = 76;
    AigcFeedbackInfo aigc_feedback_info = 77;
    ChatContent chat_content = 78;
}
