syntax = "proto3";

import "Media.proto";

message RecomTopicList {
    uint64 topic_id = 1;
    string topic_name = 2;
    uint32 type = 3;
    uint64 discuss_num = 4;
    uint32 tag = 5;
    string topic_desc = 6;
    string topic_pic = 7;
    int64 update_time = 8;
    string author = 9;
    repeated Media media = 10;
    int32 is_video_topic = 11;
}
