syntax = "proto3";

import "ThreadInfo.proto";

message DataRes {
    repeated ThreadInfo recom_thread_info = 1;
}
