syntax = "proto3";

message SimpleUser {
    int64 user_id = 1;
    int32 user_status = 2;
    string secureemail = 3;
    string securemobil = 4;
    string user_name = 5;
    string user_nickname = 6;
    uint32 incomplete_user = 7;
    string portrait = 8;
    int32 agree_type = 9;
}
