syntax = "proto3";
package tbClient.api.response;
import "Post/Reply.proto";
import "Forum/SimpleForum.proto";
import "Error.proto";
import "Page.proto";
import "User.proto";

message ReplyResponse {
    Error error = 1;
    message Data {
        Page page = 3;
        tbClient.forum.SimpleForum forum = 2;
        repeated tbClient.post.Reply post_list = 6;
        repeated User user_list = 13;
        int32 has_fold_comment = 68;
    };
    Data data = 2;
}
