syntax = "proto3";
package tbClient.forum;

message SimpleForum {
    int64 id = 1;
}
